--- a/css/main.css
+++ b/css/main.css
@@ -6,3 +6,14 @@
 .sfondo-rosso:hover{
     background: red;
 }
+
+/* Es-2 */
+.ex-2-square{
+    transform: width 1s linear 1s;
+}
+
+.ex-2-square:hover{
+    width: 1100px;
+}
+
+/* Es-3 */
