--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
 
 /* Es-2 */
 .ex-2-square{
-    transform: width .3s linear .3s;
+    transform: width 1s linear .3s;
 }
 
 .ex-2-square:hover{
@@ -34,4 +34,13 @@
 
 .ex-4-square:hover{
     opacity: 0;
+}
+
+/* Es-5 */
+.ex-5-square:hover{
+    transform: scale(1.5);
+}
+
+.ex-5-square:active{
+    transform: scale(0.8);
 }
