--- a/css/main.css
+++ b/css/main.css
@@ -44,3 +44,13 @@
 .ex-5-square:active{
     transform: scale(0.8);
 }
+
+/* Es-6 */
+.ex-6-img{
+    filter: grayscale(0);
+    transition: 1s;
+}
+
+.ex-6-img:hover{
+    filter: grayscale(1);
+}
