--- a/css/main.css
+++ b/css/main.css
@@ -54,3 +54,19 @@
 .ex-6-img:hover{
     filter: grayscale(1);
 }
+
+/* Es-7 */
+.ex-7-img{
+    animation-name: cambio;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes cambio{
+    from{
+        filter: grayscale(1);
+    }
+    to{
+        filter: grayscale(0);
+    }
+}
