--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
 
 /* Es-2 */
 .ex-2-square{
-    transform: width 1s linear .3s;
+    transition: 2s;
 }
 
 .ex-2-square:hover{
@@ -39,10 +39,12 @@
 /* Es-5 */
 .ex-5-square:hover{
     transform: scale(1.5);
+    transition: 1s;
 }
 
 .ex-5-square:active{
     transform: scale(0.8);
+    transition: 1s;
 }
 
 /* Es-6 */
@@ -73,9 +75,8 @@
 
 /* Es-8 */
 .ex-8-img{
-    transition: border-radius 1s;
+    transition: 2s;
     animation-name: cambio-2;
-    animation-duration: 4s;
 }
 
 @keyframes cambio-2{
@@ -91,4 +92,17 @@
     border-radius: 5%;
     filter: grayscale(1);
 }
+
 /* Es-9 */
+.ex-9-img{
+    filter: sepia(0);
+    transition: 2s
+                
+}   
+
+.ex-9-img:hover{
+    transform: scale(1.5);
+    border-radius: 5%;
+    filter: sepia(1);
+}
+
