--- a/css/main.css
+++ b/css/main.css
@@ -106,3 +106,23 @@
     filter: sepia(1);
 }
 
+/* Es-10 */
+.ex-10-icon{
+    animation: mymove 2s infinite;
+    transform: rotate(0);
+}
+
+@keyframes mymove{
+   50% {transform: rotate(360deg);}
+}
+
+/* Es-11 */
+.ex-11-icon{
+    transform: rotate(0);
+    transition: 2s;
+}
+
+.ex-11-icon:hover{
+    transform: rotate(300deg);
+    transition: 2s;
+}
